assets/css/site.css
body {
}

p.bio{
  overflow: auto;  
  font-size:15px;  
}

img#headshot{
   float: right;
   clear: left;
   margin: 0 0 10px 10px;
   width:450px;
}
section#header {
    background-image: url('../../images/cup-of-coffee-1280537_1920.jpg');
    max-width: 100%;
    height: auto;
    background-repeat: no-repeat;
    background-size: cover;
}
img#wardrobe.img-responsive{
    width:570px;
    height:618.667px;   
}

img#bank.img-responsive{
    width:570px;
    height:618.667px; 
}

img#travel{
   width:570px;
   height:566.667px; 
}
h3#code{
    color:coral;
}
#banner .button {
    color: #3a3939;
}
section#banner{
    background-color:teal;
}
.icon:before{
    font-size:2.50em;
}

